[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wiggle"
# version = "0.1.1"
dynamic = ["version"]
description = "Wiggle Plot for Seismic Data Section"
readme = "README.md"
authors = [
    { name = "gatechzhu", email = "gatechzhu@gmail.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "matplotlib"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.setuptools_scm]
version_scheme = "relesae-branch-semver"
local_scheme = "no-local-version"
