[metadata]
name = wiggle
version = 0.1.0
maintainer = Lijun Zhu
maintainer_email = gatechzhu@gmail.com
description = A short description of wiggle.
long_description = file: README.rst
url = https://github.com/gatechzhu/wiggle
download_url = https://github.com/gatechzhu/wiggle/releases
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
packages = find:
test_suite = tests
setup_requires =
    numpy>=1.8.2
    matplotlib>=2.0.0
install_requires =
    numpy>=1.8.2
    matplotlib>=2.0.0
tests_require =
    numpy>=1.8.2
    matplotlib>=2.0.0
    pytest