[metadata]
name = wiggle
version = 0.1.0
maintainer = Lijun Zhu
maintainer_email = gatechzhu@gmail.com
description = Wiggle Plot for Seismic Data Section
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gatechzhu/wiggle
download_url = https://github.com/gatechzhu/wiggle/releases
license = MIT
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development
    Topic :: Scientific/Engineering
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
python_requires = >3.8, <3.12
packages = find:
setup_requires =
    numpy>=1.8.2
    matplotlib>=2.0.0
install_requires =
    numpy>=1.8.2
    matplotlib>=2.0.0
tests_require =
    numpy>=1.8.2
    matplotlib>=2.0.0
    pytest